Revision history for Perl extension Math::BigInt::FastCalc.

2011-02-06 0.251 pjacklam (7558 tests)
  * Add requirement Math::BigInt version 1.991 (Peter John Acklam).

2011-02-05 0.25 pjacklam (7558 tests)
  * Remove _new() from XS code and use _new() in Math::BigInt::Calc
    instead. The XS _new() doesn't handle integers that are too large to
    be represented exactly as floating point numbers, but small enough
    to be represented as 64 bit integers. The XS _new() also returns
    nan, not inf, when it overflows. This closes RT #63335 and RT #49569
    (Peter John Acklam).
  * Copied test files from latest Math::BigInt (v1.991): bigfltpm.inc,
    bigfltpm.t, bigintpm.inc, bigintpm.t, mbi_rand.t, mbimbf.inc,
    mbimbf.t (Peter John Acklam).

2010-11-07 0.24 rafl (6938 tests)
  * Reduce repetition (and object size) in FastCalc.xs by using ALIASes
    (Nicholas Clark).
  * inline the macros CONSTANT_OBJ and RETURN_MORTAL_BOOL. (Nicholas Clark).
  * Avoid creating two entries instead of one on the mortals stack in _new() and
    _zero() (Nicholas Clark).
  * Convert from DynaLoader to XSLoader (Nicholas Clark).
  * Adapt to the changed order of the return value Math::BigInt::Calc::_base_len
    in Math::BigInt 1.97 (Nicholas Clark).
  * Initialise BASE and BASE_LEN as part of bootstrap, avoiding special one-shot
    setter routines (Nicholas Clark).
  * Remove the $BASE or $BASE_LEN globals. They were never documented or
    exported, and are now unnecessary (Nicholas Clark).

2010-09-14 0.22 rafl (6938 tests)
  * Modernize the test suite to use Test::More instead of Test.

2010-09-03 0.21 rafl (6892 tests)
  * Remove some unneeded test code which only broke things when being ran in the
    perl core.

2010-09-03 0.20 rafl (6892 tests)
  * Avoid certain kinds of segfaults as well as wrong bnok() behaviour by
    depending on Math::BigInt 0.90.

2008-04-15 0.19 Tels (6892 tests)
  * forcefully regenerate META.yml (sigh@Module::Install)
