@@ -15,6 +15,10 @@ MANIFEST			This list of files
 MANIFEST.SKIP
 META.yml
 README
+t/00sig.t
+t/01load.t
+t/02pod.t
+t/03podcov.t
 t/bigfltpm.inc
 t/bigfltpm.t
 t/bigintfc.t
@@ -25,7 +29,5 @@ t/leak.t
 t/mbi_rand.t
 t/mbimbf.inc
 t/mbimbf.t
-t/pod.t
-t/pod_cov.t
 TODO
 SIGNATURE                                Public-key signature (added by MakeMaker)
