@@ -14,12 +14,12 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e080dd8a1c8a74e01ba10edb185778813b9ef9e5 CHANGES
+SHA1 4211b8eec9ff05f50a51c55364813c428ea765f3 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
-SHA1 4024a7dea3f6fdc2b315e41a5c1ee77599fe20a0 FastCalc.xs
-SHA1 c3ebcc61b84a33936a5db5b78fdb1a8f0b37fdd3 MANIFEST
+SHA1 72eb2ffdd3311b4eee8adc75d208ad0b8248e6ec FastCalc.xs
+SHA1 7239e6509251999ce2f0af0d61a5ec3de65a7f63 MANIFEST
 SHA1 d2c445679973476e01c03a8f5df530150be2b74b MANIFEST.SKIP
-SHA1 3e293aa7c96acd7fd93324317bc14c8ac3c1f6dd META.yml
+SHA1 db5c5dd7b407d339e1bce96d34755cf62c6d5401 META.yml
 SHA1 8078f4b4f7e81c743896b605ac8c890d0884bf06 Makefile.PL
 SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
@@ -31,7 +31,11 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 23dba2c9350501d4a8422afc49364854417f6712 lib/Math/BigInt/FastCalc.pm
+SHA1 c9c1595f8636498fc76d99687aaa916815d093e6 lib/Math/BigInt/FastCalc.pm
+SHA1 6e9557e746e881ab1568cdcec17ff3c4f1508502 t/00sig.t
+SHA1 b5ae0080ba067ecb1253a50834dc6c2946af26b9 t/01load.t
+SHA1 02ef05af53cb7378452590324bb21dfe61f44069 t/02pod.t
+SHA1 b0d251938fb1a6f4ab2b731b9f1bfa2ce489ccaf t/03podcov.t
 SHA1 03a9a3dde7d4fcc3eb2e8f245ab0b0253f1d5821 t/bigfltpm.inc
 SHA1 a8f364fea5e2993f5ae7bd3f8463024175d33e24 t/bigfltpm.t
 SHA1 a8f58743d8936a21bbb56c9b92415fd4ea34cc00 t/bigintfc.t
@@ -42,12 +46,10 @@ SHA1 47b841398933fd438c137ea5ffda893497b68443 t/leak.t
 SHA1 2b9490eab4d5371b804a39fb16e77c6bd6bbd006 t/mbi_rand.t
 SHA1 38d000d99cb2492ab518786e62ab1fae710e0f8d t/mbimbf.inc
 SHA1 2709f7d1acdb39aab910d3ba4c88191b28cc3cfc t/mbimbf.t
-SHA1 1f663f34511d969ea18a235e96cff867869b8d2d t/pod.t
-SHA1 85872557f2e8ca0006d77f377bea14ad62a0cf6a t/pod_cov.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1OVtsACgkQVQvyyU1bchoUlACfbHoEmG8/nLMj9RPVAQFwzw0y
-i7wAnA01UPCZ+WvDEsDQ7uJY7YMrA9Vy
-=dPNa
+iEYEARECAAYFAk1RWesACgkQVQvyyU1bchqv5QCg1+DcVvsDjlfCZKyzoHbQhdP5
+rX0An3sGyv3SLOGoI44n6M/Mz5+eg4Yq
+=86bo
 -----END PGP SIGNATURE-----
