@@ -1,0 +1,13 @@
+#!/usr/bin/perl -w
+
+use strict;             # restrict unsafe constructs
+
+use Test::More;
+
+# Ensure a recent version of Test::Pod
+
+my $min_tp = 1.22;
+eval "use Test::Pod $min_tp";
+plan skip_all => "Test::Pod $min_tp required for testing POD" if $@;
+
+all_pod_files_ok();
