@@ -1,5 +1,13 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2011-02-08 0.26 pjacklam (7560 tests)
+  * Add Perl v5.6 compatibility code to FastCalc.xs (RT #63859)
+    (Peter John Acklam).
+  * Add 00sig.t for testing SIGNATURE, and 01load.t for basic module loading
+    and giving diagnostics useful for bug tracking (Peter John Acklam).
+  * Rename pod.t to 02pod.t and pod_cov.t to 03podcov.t and use more generic
+    code (Peter John Acklam).
+
 2011-02-06 0.251 pjacklam (7558 tests)
   * Add requirement Math::BigInt version 1.991 (Peter John Acklam).
 
